deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-service
spec:
  selector:
    app: todo-list-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
